WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306087
AX: Remove all ENABLE(AX_INCLUDE_IGNORED_IN_CORE_AX_TREE) references whenever ENABLE(ACCESSIBILITY_ISOLATED_TREE)
https://bugs.webkit.org/show_bug.cgi?id=306087
Summary
AX: Remove all ENABLE(AX_INCLUDE_IGNORED_IN_CORE_AX_TREE) references whenever...
Tyler Wilcock
Reported
2026-01-22 18:49:30 PST
Including ignored objects in the core accessibility tree is required for serving the text marker APIs off the main-thread, so remove !ENABLE(AX_INCLUDE_IGNORED_IN_CORE_AX_TREE) as a supported configuration in isolated tree mode.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-22 18:49:39 PST
<
rdar://problem/168726877
>
Tyler Wilcock
Comment 2
2026-01-22 19:09:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57100
EWS
Comment 3
2026-01-23 07:17:43 PST
Committed
306090@main
(3452a0fd466c): <
https://commits.webkit.org/306090@main
> Reviewed commits have been landed. Closing PR #57100 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug