AX: Remove all ENABLE(AX_INCLUDE_IGNORED_IN_CORE_AX_TREE) references whenever ENABLE(ACCESSIBILITY_ISOLATED_TREE) https://bugs.webkit.org/show_bug.cgi?id=306087 rdar://168726877

Reviewed by Joshua Hoffman.

Including ignored objects in the core accessibility tree is required for serving the text marker APIs off the main-thread,
so remove !ENABLE(AX_INCLUDE_IGNORED_IN_CORE_AX_TREE) as a supported configuration in isolated tree mode.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::performDeferredCacheUpdate):
* Source/WebCore/accessibility/AXObjectCacheInlines.h:
(WebCore::AXObjectCache::objectBecameUnignored):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::objectChangedIgnoredState):
(WebCore::AXIsolatedTree::updateDependentProperties):
(WebCore::AXIsolatedTree::updateChildren):
(WebCore::createIsolatedObjectData):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:
(WebCore::AXIsolatedTree::objectBecameIgnored):
(WebCore::AXIsolatedTree::objectBecameUnignored):

Canonical link: https://commits.webkit.org/306090@main